--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-jshint": "^1.10.0",
     "gulp-load-plugins": "^0.10.0",
     "gulp-minify-css": "^1.1.1",
+    "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^1.3.3",
     "gulp-scss-lint": "^0.1.12",
