--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "serve-static": "^1.10.0"
   },
   "devDependencies": {
-    "browser-sync": "^2.6.9",
+    "browser-sync": "^2.9.4",
     "gulp": "^3.8.11",
     "gulp-changed": "^1.2.1",
     "gulp-clean": "^0.3.1",
@@ -32,13 +32,15 @@
     "gulp-imagemin": "^2.2.1",
     "gulp-jade": "^1.0.0",
     "gulp-jshint": "^1.10.0",
-    "gulp-load-plugins": "^0.10.0",
+    "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-minify-css": "^1.1.1",
     "gulp-nodemon": "^2.0.3",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^1.3.3",
     "gulp-scss-lint": "^0.1.12",
     "gulp-uglify": "^1.2.0",
-    "jshint-stylish": "^1.0.1"
+    "jshint-stylish": "^1.0.1",
+    "main-bower-files": "^2.9.0",
+    "merge-stream": "^1.0.0"
   }
 }
