--- a/package.json
+++ b/package.json
@@ -8,39 +8,36 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/MarcusTan/express-jade-seed.git"
+    "url": ""
   },
-  "author": "mt",
+  "author": "mt, james",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MarcusTan/express-jade-seed/issues"
-  },
-  "homepage": "https://github.com/MarcusTan/express-jade-seed",
   "dependencies": {
-    "express": "^4.12.3",
-    "jade": "^1.11.0",
-    "serve-static": "^1.10.0"
+    "express": "4.14.0",
+    "pug": "2.0.0-beta6",
+    "serve-static": "1.11.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.9.4",
-    "gulp": "^3.8.11",
-    "gulp-changed": "^1.2.1",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-filter": "^2.0.2",
-    "gulp-flatten": "0.0.4",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jade": "^1.0.0",
-    "gulp-jshint": "^1.10.0",
-    "gulp-load-plugins": "^1.0.0-rc.1",
-    "gulp-minify-css": "^1.1.1",
-    "gulp-nodemon": "^2.0.3",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sass": "^1.3.3",
-    "gulp-scss-lint": "^0.1.12",
-    "gulp-uglify": "^1.2.0",
-    "jshint-stylish": "^1.0.1",
-    "main-bower-files": "^2.9.0",
-    "merge-stream": "^1.0.0"
+    "browser-sync": "2.14.3",
+    "gulp": "3.9.1",
+    "gulp-changed": "1.3.2",
+    "gulp-clean": "0.3.2",
+    "gulp-concat": "2.6.0",
+    "gulp-filter": "4.0.0",
+    "gulp-flatten": "0.3.1",
+    "gulp-imagemin": "3.0.3",
+    "gulp-jade": "1.1.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-load-plugins": "1.2.4",
+    "gulp-minify-css": "1.2.4",
+    "gulp-nodemon": "2.1.0",
+    "gulp-plumber": "1.1.0",
+    "gulp-sass": "2.3.2",
+    "gulp-scss-lint": "0.4.0",
+    "gulp-uglify": "2.0.0",
+    "jshint": "^2.9.3",
+    "jshint-stylish": "2.2.1",
+    "main-bower-files": "2.13.1",
+    "merge-stream": "1.0.0"
   }
 }
