--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.4",
-    "bootstrap-sass": "~3.3.5"
+    "bootstrap-sass": "^3.3.7"
   }
 }
