--- a/package.json
+++ b/package.json
@@ -13,31 +13,28 @@
   "author": "mt, james",
   "license": "ISC",
   "dependencies": {
-    "express": "4.14.0",
-    "pug": "2.0.0-beta6",
-    "serve-static": "1.11.1"
+    "express": "4.15.2"
   },
   "devDependencies": {
-    "browser-sync": "2.14.3",
+    "browser-sync": "2.18.8",
     "gulp": "3.9.1",
-    "gulp-changed": "1.3.2",
+    "gulp-changed": "2.0.0",
     "gulp-clean": "0.3.2",
-    "gulp-concat": "2.6.0",
-    "gulp-filter": "4.0.0",
+    "gulp-clean-css": "^3.0.4",
+    "gulp-concat": "2.6.1",
+    "gulp-filter": "5.0.0",
     "gulp-flatten": "0.3.1",
-    "gulp-imagemin": "3.0.3",
-    "gulp-jade": "1.1.0",
+    "gulp-imagemin": "3.2.0",
     "gulp-jshint": "^2.0.1",
-    "gulp-load-plugins": "1.2.4",
-    "gulp-minify-css": "1.2.4",
-    "gulp-nodemon": "2.1.0",
+    "gulp-load-plugins": "1.5.0",
+    "gulp-nodemon": "2.2.1",
     "gulp-plumber": "1.1.0",
-    "gulp-sass": "2.3.2",
+    "gulp-sass": "3.1.0",
     "gulp-scss-lint": "0.4.0",
-    "gulp-uglify": "2.0.0",
+    "gulp-uglify": "2.1.2",
     "jshint": "^2.9.3",
     "jshint-stylish": "2.2.1",
     "main-bower-files": "2.13.1",
-    "merge-stream": "1.0.0"
+    "merge-stream": "1.0.1"
   }
 }
