--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "roger,mt, james",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap-sass": "^3.3.7",
     "express": "4.15.2",
     "jquery": "^3.2.1",
